# Prism

./: .dockerignore  .gitignore  DEPLOYMENT.md  LICENSE  README.md  docker-compose.yml  prd.md
.github/workflows/: ci.yml  prism-alert-creation.yml  prism-comment-trigger.yml  prism-dashboard-creation.yml  prism-pr-trigger.yml
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/agents/: __init__.py  aggregator.py  alert_agent.py  base_agent.py  context_fetcher.py  dashboard_agent.py  observability_agent.py  performance_agent.py  prompts.py  quality_agent.py  reasoning.py  schemas.py  security_agent.py
backend/api/: __init__.py  auth.py  dlq.py  monitoring.py  webhook.py
backend/db/: __init__.py  index.py  models.py  postgres.py  repository.py
backend/observability/: __init__.py  logging.py  metrics.py  tracing.py
backend/orchestrator/: __init__.py  engine.py  task_graph.py
backend/orchestrator/memory/: __init__.py  decision_log.py  review_memory.py
backend/services/: __init__.py  alert_service.py  comment_service.py  dashboard_service.py  diff_parser.py  embedding_cache.py  github_service.py  graph_builder.py  history_fetcher.py  index_manager.py  learning_service.py  merkle_tree.py  repo_cloner.py  simhash.py  simple_ast_parser.py  static_analyzer.py  symbol_retriever.py  syntactic_chunker.py  vector_indexer.py  vector_retriever.py
backend/utils/: __init__.py  config.py  connections.py  llm_factory.py  qdrant_client.py
backend/workers/: __init__.py  celery_app.py  indexing_tasks.py  tasks.py
infra/helm/prism/: Chart.yaml  values.yaml
infra/helm/prism/templates/: deployment.yaml  hpa.yaml  networkpolicy.yaml  serviceaccount.yaml
infra/terraform/: main.tf
monitoring/grafana/dashboards/: prism-review.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
