[project]
name = "prism"
version = "0.1.0"
description = "Prism — Production AI Code Reviewer with Multi-Agent Architecture"
requires-python = ">=3.11"
dependencies = [
    # ── Web Framework ─────────────────────────────────────────────────
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # ── Git Operations ────────────────────────────────────────────────
    "gitpython>=3.1.40",
    "httpx>=0.25.0",

    # ── GitHub Integration ────────────────────────────────────────────
    "pygithub>=2.1.1",
    "pyjwt>=2.10.1",
    "cryptography>=46.0.2",

    # ── AST Parsing (tree-sitter) ─────────────────────────────────────
    "tree-sitter>=0.20.4",
    "tree-sitter-python>=0.20.4",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.0",

    # ── Graph Analysis ────────────────────────────────────────────────
    "networkx>=3.2.1",

    # ── LLM Providers ─────────────────────────────────────────────────
    "google-generativeai>=0.3.0",          # Gemini (default)
    "openai>=1.0.0",                       # OpenAI
    "anthropic>=0.30.0",                   # Anthropic
    "groq>=0.11.0",                        # Groq

    # ── Vector Database ───────────────────────────────────────────────
    "qdrant-client>=1.15.1",

    # ── Task Queue ────────────────────────────────────────────────────
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # ── PostgreSQL (Audit Trail) ──────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.27",
    "asyncpg>=0.29.0",

    # ── Observability ─────────────────────────────────────────────────
    "structlog>=24.0.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",

    # ── Utilities ─────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",                     # Retry logic for LLM calls
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "bandit>=1.7.5",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ["py311"]
