[project]
name = "prism"
version = "0.1.0"
description = "Prism — Production AI Code Reviewer with Multi-Agent Architecture"
requires-python = ">=3.11"
dependencies = [
    # ── Web Framework ─────────────────────────────────────────────────
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # ── Git Operations ────────────────────────────────────────────────
    "gitpython>=3.1.40",
    "httpx>=0.25.0",

    # ── GitHub Integration ────────────────────────────────────────────
    "pyjwt>=2.10.1",
    "cryptography>=46.0.2",

    # ── AST Parsing (tree-sitter) ─────────────────────────────────────
    "tree-sitter>=0.20.4",
    "tree-sitter-python>=0.20.4",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.0",

    # ── Graph Analysis ────────────────────────────────────────────────
    "networkx>=3.2.1",

    # ── LLM Providers & Embeddings ────────────────────────────────────
    "litellm>=1.20.0",                     # LLM generation abstraction
    "sentence-transformers>=2.3.0",        # Local embeddings (all-MiniLM-L6-v2)

    # ── Vector Database ───────────────────────────────────────────────
    "qdrant-client>=1.15.1",

    # ── Task Queue ────────────────────────────────────────────────────
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # ── PostgreSQL (Audit Trail) ──────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.27",
    "asyncpg>=0.29.0",

    # ── Observability ─────────────────────────────────────────────────
    "structlog>=24.0.0",
    # OpenTelemetry core
    "opentelemetry-api==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    # OTel auto-instrumentation (creates spans automatically)
    "opentelemetry-instrumentation-fastapi==0.60b1",
    "opentelemetry-instrumentation-httpx==0.60b1",
    "opentelemetry-instrumentation-celery==0.60b1",
    "opentelemetry-instrumentation-redis==0.60b1",

    # ── Utilities ─────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",                     # Retry logic for LLM calls
    "boto3>=1.34.0",                       # AWS SDK for SSM, SQS, CloudWatch
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "bandit>=1.7.5",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ["py311"]
